PP-15584 refactor to use pay-java-commons
Refactor to use `pay-java-commons`'s `queue-dropwizard-5` package.